deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: endgames
  name: deployment-endgame
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: my-react-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-react-app
    spec:
      containers:
      - name: my-react-app
        image: 225317159220.dkr.ecr.ap-south-2.amazonaws.com/my-react-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
