service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: endgames
  name: service-endgame
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: my-react-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
